--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     env_file:
       - .env
     networks:
-      - reverse-proxy    
+      - reverse-proxy
+      - default    
     ports:
       - "8501:8501"      
     restart: unless-stopped
